@@ -2,6 +2,7 @@
 Version 1.0ea12 - 
 
 - IntelliJ plugin integration
+- new improved syntax coloring process
 - improved debugger UI with detachable panels
 - improved speed when checking grammar (delay creation of error paths when the user clicks on a rule)
 - prefs: can specify now ANTLR 3 classpath
